--- a/MakeupInventory/MakeupInventory/src/main/resources/application.properties
+++ b/MakeupInventory/MakeupInventory/src/main/resources/application.properties
@@ -1,26 +1,13 @@
-spring.application.name=MakeupInventory
 # Puerto del servidor
 server.port=8080
 
-# Configuración de la base de datos H2 (en memoria)
-spring.datasource.url=jdbc:h2:mem:makeupdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=nikol
-spring.datasource.password=sapa1614$
+# Configuración de conexión a FreeSQL (MySQL)
+spring.datasource.url=jdbc:mysql://sql10.freesqldatabase.com:3306/sql10775874?useSSL=false&serverTimezone=UTC
+spring.datasource.username=sql10775874
+spring.datasource.password=xAmayIRA6F
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Mostrar la consola H2 en el navegador
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA - Generación automática de las tablas
+# JPA (Hibernate)
 spring.jpa.hibernate.ddl-auto=update
-
-# Mostrar SQL en la consola
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# Nombre para el dialecto H2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# Mensajes de validación en español (opcional)
-spring.messages.basename=messages
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
